Fix Broken Layout Of My Event Page on Small screen

--- a/public/style/style.scss
+++ b/public/style/style.scss
@@ -548,7 +548,7 @@ nav[role="top-nav"] img[alt="icon"] {
     left: 50%;
     transform: translateX(-50%);
     top: 10%;
-    height: 80%;
+    height: 70%;
 }
 nav[role="top-nav"] input {
     width: 160px;
@@ -1030,6 +1030,7 @@ article[role="event-item"] {
             padding-right: 10px;
         }
         section[role="bio"] {
+            white-space: normal;
             margin-top: calc(0.06052631578947 * #{$event-item-height});
             padding-right: 10px;
         }
